--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="/assets/css/style.css">
+    <link rel="stylesheet" href="style.css">
     <title>AnnLio | <?= $title ?></title>
 </head>
 <body>
@@ -28,6 +28,6 @@
    <footer>
    </footer>
     <script src="https://kit.fontawesome.com/25d98733ec.js" crossorigin="anonymous"></script>
-    <script src="/assets/js/app.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
